api_versioned_docs/version-12.0.4/avalonia/controls/charts/pointandfigureseries.mdx
---
title: 'PointAndFigureSeries'
hide_title: true
slug: '/avalonia/controls/charts/pointandfigureseries'
uid: 'Avalonia.Controls.Charts.PointAndFigureSeries'
commentId: 'T:Avalonia.Controls.Charts.PointAndFigureSeries'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.Charts'
assembly: 'Avalonia.Controls.Charts'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Charts'
tfms:
  - 'net9.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">PointAndFigureSeries Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Charts</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.Charts</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.Charts</code>
</div>
</div>

<div className="apiref-page__lead">

Represents a Point and Figure (P&amp;F) chart series.

</div>

<div className="apiref-page__signature">

```csharp
public class PointAndFigureSeries
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../avaloniaobject">AvaloniaObject</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../animation/animatable">Animatable</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../styledelement">StyledElement</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../visual">Visual</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../layout/layoutable">Layoutable</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../interactivity/interactive">Interactive</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../input/inputelement">InputElement</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../control">Control</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../primitives/templatedcontrol">TemplatedControl</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="chartseries">ChartSeries</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="cartesianseries">CartesianSeries</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="financialseries">FinancialSeries</a> <span className="apiref-page__relation-separator">-&gt;</span> PointAndFigureSeries
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [PointAndFigureSeries](#uid-267304e418) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-267304e418"></span>

### PointAndFigureSeries Constructor

```csharp
public PointAndFigureSeries()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [CreateLegendItem](#uid-272a1b8728) | Creates the legend item that represents this series. |
| [GetMarkerShape](#uid-71284327af) | Gets the legend marker shape for this series. |
| [RenderSeries](#uid-0d1e343ff2) | No summary available. |
| [TryRenderExclusive](#uid-372ef4a3d1) | Allows custom/extension financial series to render themselves exclusively, bypassing the standard OHLC/Candlestick rendering pipeline. Return `true` to indicate rendering is complete and no further series should render. |
| [GetDataPoints](financialseries.mdx#uid-5926b56436) | Returns close values for Cartesian-series compatibility. Financial series use close as their representative scalar value when consumed by shared Cartesian features such as overlays, labels, and generic point enumeration. Inherited from [FinancialSeries](financialseries.mdx). |
| [GetDataPointsWithItems](financialseries.mdx#uid-6e613c881f) | Returns close values for Cartesian-series compatibility together with the source item. Inherited from [FinancialSeries](financialseries.mdx). |
| [GetFinancialPoints](financialseries.mdx#uid-21ae97a736) | Gets the financial data points (OHLC) from the ItemsSource. Inherited from [FinancialSeries](financialseries.mdx). |
| [ClearSelection](chartseries.mdx#uid-35e5138bc4) | Clears all selected data points. Inherited from [ChartSeries](chartseries.mdx). |
| [IsDataPointSelected](chartseries.mdx#uid-6e3a99774f) | Checks if a data point at the specified index is selected. Inherited from [ChartSeries](chartseries.mdx). |
| [TrySelectDataPoint](chartseries.mdx#uid-cc7ada3268) | Handles selection of a data point at the specified index. Inherited from [ChartSeries](chartseries.mdx). |
| [ApplyTemplate](../primitives/templatedcontrol.mdx#uid-cc70dd4d2f) | Creates the visual children of the control, if necessary Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [GetIsTemplateFocusTarget](../primitives/templatedcontrol.mdx#uid-75a788f38f) | Gets the value of the IsTemplateFocusTargetProperty attached property on a control. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [SetIsTemplateFocusTarget](../primitives/templatedcontrol.mdx#uid-281801c25f) | Sets the value of the IsTemplateFocusTargetProperty attached property on a control. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [Focus](../../input/inputelement.mdx#uid-6b657af583) | Focuses the control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [GetIsHoldWithMouseEnabled](../../input/inputelement.mdx#uid-0420943ecd) | Inherited from [InputElement](../../input/inputelement.mdx). |
| [GetIsHoldingEnabled](../../input/inputelement.mdx#uid-2af9987676) | Inherited from [InputElement](../../input/inputelement.mdx). |
| [SetIsHoldWithMouseEnabled](../../input/inputelement.mdx#uid-a494efd7c7) | Inherited from [InputElement](../../input/inputelement.mdx). |
| [SetIsHoldingEnabled](../../input/inputelement.mdx#uid-90a47948ad) | Inherited from [InputElement](../../input/inputelement.mdx). |
| [AddHandler (2 overloads)](../../interactivity/interactive.mdx#uid-02518f5b3a) | Adds a handler for the specified routed event. Inherited from [Interactive](../../interactivity/interactive.mdx). |
| [RaiseEvent](../../interactivity/interactive.mdx#uid-d6aba452e6) | Raises a routed event. Inherited from [Interactive](../../interactivity/interactive.mdx). |
| [RemoveHandler (2 overloads)](../../interactivity/interactive.mdx#uid-456e485be9) | Removes a handler for the specified routed event. Inherited from [Interactive](../../interactivity/interactive.mdx). |
| [Arrange](../../layout/layoutable.mdx#uid-d7a19ca8f7) | Arranges the control and its children. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [InvalidateArrange](../../layout/layoutable.mdx#uid-3e9d4ebe35) | Invalidates the arrangement of the control and queues a new layout pass. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [InvalidateMeasure](../../layout/layoutable.mdx#uid-31c6107bb9) | Invalidates the measurement of the control and queues a new layout pass. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [Measure](../../layout/layoutable.mdx#uid-1da410eb81) | Carries out a measure of the control. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [UpdateLayout](../../layout/layoutable.mdx#uid-529d4a08ea) | Executes a layout pass. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [GetFlowDirection](../../visual.mdx#uid-12716acd38) | Gets the value of the attached [Avalonia.Visual.FlowDirectionProperty](xref:Avalonia.Visual.FlowDirectionProperty) on a control. Inherited from [Visual](../../visual.mdx). |
| [InvalidateVisual](../../visual.mdx#uid-1cd22a7496) | Invalidates the visual and queues a repaint. Inherited from [Visual](../../visual.mdx). |
| [Render](../../visual.mdx#uid-615917604b) | Renders the visual to a [Avalonia.Media.DrawingContext](xref:Avalonia.Media.DrawingContext). Inherited from [Visual](../../visual.mdx). |
| [SetFlowDirection](../../visual.mdx#uid-a670b680eb) | Sets the value of the attached [Avalonia.Visual.FlowDirectionProperty](xref:Avalonia.Visual.FlowDirectionProperty) on a control. Inherited from [Visual](../../visual.mdx). |
| [ApplyStyling](../../styledelement.mdx#uid-b0f81a6f8f) | Applies styling to the control if the control is initialized and styling is not already applied. Inherited from [StyledElement](../../styledelement.mdx). |
| [BeginInit](../../styledelement.mdx#uid-91c6ccadce) | Inherited from [StyledElement](../../styledelement.mdx). |
| [EndInit](../../styledelement.mdx#uid-17b450469d) | Inherited from [StyledElement](../../styledelement.mdx). |
| [TryGetResource](../../styledelement.mdx#uid-2046a6b284) | Inherited from [StyledElement](../../styledelement.mdx). |
| [Bind (8 overloads)](../../avaloniaobject.mdx#uid-1c60c7bda3) | Binds a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) to an [Avalonia.Data.BindingBase](xref:Avalonia.Data.BindingBase). Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [CheckAccess](../../avaloniaobject.mdx#uid-260ff7a68d) | Returns a value indicating whether the current thread is the UI thread. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [ClearValue (4 overloads)](../../avaloniaobject.mdx#uid-41de208fbe) | Clears a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty)'s local value. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [CoerceValue](../../avaloniaobject.mdx#uid-3bec32f39e) | Coerces the specified [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty). Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [Equals](../../avaloniaobject.mdx#uid-a8a8e94305) | Compares two objects using reference equality. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [GetBaseValue](../../avaloniaobject.mdx#uid-9c615efbba) | Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [GetHashCode](../../avaloniaobject.mdx#uid-7f7db1e7a2) | Gets the hash code for the object. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [GetValue (3 overloads)](../../avaloniaobject.mdx#uid-5142cd4792) | Gets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [IsAnimating](../../avaloniaobject.mdx#uid-8cbfc7521a) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is animating. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [IsSet](../../avaloniaobject.mdx#uid-f8bf0bbdcc) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is set on this object. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [SetCurrentValue (2 overloads)](../../avaloniaobject.mdx#uid-38759fd088) | Sets the value of a dependency property without changing its value source. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [SetValue (3 overloads)](../../avaloniaobject.mdx#uid-47d14e19d7) | Sets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [VerifyAccess](../../avaloniaobject.mdx#uid-3b9d3c9793) | Checks that the current thread is the UI thread and throws if not. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-272a1b8728"></span>

### CreateLegendItem Method

Creates the legend item that represents this series.

```csharp
public Avalonia.Controls.Charts.ChartLegendItem CreateLegendItem(int seriesIndex, Avalonia.Media.IBrush fallbackBrush)
```

#### Parameters

`seriesIndex` int

The series index within its owner chart.


`fallbackBrush` [Avalonia.Media.IBrush](xref:Avalonia.Media.IBrush)

The palette brush to use when the series has no explicit brush.


#### Returns

[Avalonia.Controls.Charts.ChartLegendItem](xref:Avalonia.Controls.Charts.ChartLegendItem)

The legend item for this series.


</section>

<section className="apiref-page__member-entry">

<span id="uid-71284327af"></span>

### GetMarkerShape Method

Gets the legend marker shape for this series.

```csharp
public Avalonia.Controls.Charts.LegendMarkerShape GetMarkerShape()
```

#### Returns

[Avalonia.Controls.Charts.LegendMarkerShape](xref:Avalonia.Controls.Charts.LegendMarkerShape)

The marker shape to use in the legend.


</section>

<section className="apiref-page__member-entry">

<span id="uid-0d1e343ff2"></span>

### RenderSeries Method

```csharp
public void RenderSeries(Avalonia.Controls.Charts.SeriesRenderContext& context)
```

#### Parameters

`context` [Avalonia.Controls.Charts.SeriesRenderContext](xref:Avalonia.Controls.Charts.SeriesRenderContext)&amp;


</section>

<section className="apiref-page__member-entry">

<span id="uid-372ef4a3d1"></span>

### TryRenderExclusive Method

Allows custom/extension financial series to render themselves exclusively,
bypassing the standard OHLC/Candlestick rendering pipeline.
Return `true` to indicate rendering is complete and no further series should render.

```csharp
public bool TryRenderExclusive(Avalonia.Media.DrawingContext context, Avalonia.Rect plotArea)
```

#### Parameters

`context` [Avalonia.Media.DrawingContext](xref:Avalonia.Media.DrawingContext)


`plotArea` [Avalonia.Rect](xref:Avalonia.Rect)


#### Returns

bool


</section>

## Properties

| Name | Description |
| --- | --- |
| [BoxSize](#uid-bc0afe9843) | Gets or sets the box size (price change required to add a new X or O). |
| [OBrush](#uid-79db3b3907) | Gets or sets the brush used for falling columns (O). |
| [ReversalAmount](#uid-613489a361) | Gets or sets the reversal amount (number of boxes required to change direction). |
| [XBrush](#uid-532897169b) | Gets or sets the brush used for rising columns (X). |
| [CategoryPath](financialseries.mdx#uid-99f585eb97) | Compatibility alias for [Avalonia.Controls.Charts.FinancialSeries.DatePath](xref:Avalonia.Controls.Charts.FinancialSeries.DatePath). Inherited from [FinancialSeries](financialseries.mdx). |
| [ClosePath](financialseries.mdx#uid-dd55ba45ed) | Gets or sets the property path for the Close value. Inherited from [FinancialSeries](financialseries.mdx). |
| [DatePath](financialseries.mdx#uid-df7dc1d225) | Gets or sets the property path for the date/time category used by financial series. Financial series expose date/category mapping through this property instead of the inherited Cartesian category name. Inherited from [FinancialSeries](financialseries.mdx). |
| [DownFill](financialseries.mdx#uid-e473affd02) | Gets or sets the fill brush for downward (bearish) candles. Inherited from [FinancialSeries](financialseries.mdx). |
| [DownStroke](financialseries.mdx#uid-0f7fbb5415) | Gets or sets the stroke brush for downward (bearish) candles. Inherited from [FinancialSeries](financialseries.mdx). |
| [HighPath](financialseries.mdx#uid-3875bbd1fe) | Gets or sets the property path for the High value. Inherited from [FinancialSeries](financialseries.mdx). |
| [LowPath](financialseries.mdx#uid-76730a4744) | Gets or sets the property path for the Low value. Inherited from [FinancialSeries](financialseries.mdx). |
| [OpenPath](financialseries.mdx#uid-e137c9b41c) | Gets or sets the property path for the Open value. Inherited from [FinancialSeries](financialseries.mdx). |
| [UpFill](financialseries.mdx#uid-86f0c5ad7d) | Gets or sets the fill brush for upward (bullish) candles. Inherited from [FinancialSeries](financialseries.mdx). |
| [UpStroke](financialseries.mdx#uid-2d13247067) | Gets or sets the stroke brush for upward (bullish) candles. Inherited from [FinancialSeries](financialseries.mdx). |
| [EmptyPointMode](cartesianseries.mdx#uid-be95f2d1ba) | Gets or sets how empty (null/NaN) data points are rendered. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelBackground](cartesianseries.mdx#uid-979f29393d) | Gets or sets the background brush of the label. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelCornerRadius](cartesianseries.mdx#uid-79e766a65f) | Gets or sets the corner radius of the label background. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelFontSize](cartesianseries.mdx#uid-d2b188f9b0) | Gets or sets the font size of the label. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelForeground](cartesianseries.mdx#uid-7e931c37e0) | Gets or sets the foreground brush of the label. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelFormat](cartesianseries.mdx#uid-a62b77d386) | Gets or sets the format string for the label. &#123;0&#125; is the value, &#123;1&#125; is the category. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelOffset](cartesianseries.mdx#uid-3b4f03049a) | Gets or sets the distance from the data point to the label. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelPadding](cartesianseries.mdx#uid-360b907b65) | Gets or sets the padding of the label. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [MarkerFill](cartesianseries.mdx#uid-efe15f5a47) | Gets or sets the fill brush for the markers. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [MarkerShape](cartesianseries.mdx#uid-8d8bfcbdf5) | Gets or sets the shape of the markers. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [MarkerSize](cartesianseries.mdx#uid-1112d5bd2e) | Gets or sets the size of the markers. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [MarkerStroke](cartesianseries.mdx#uid-ccf56ed706) | Gets or sets the stroke brush for the markers. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [MarkerStrokeThickness](cartesianseries.mdx#uid-9d5aaa6875) | Gets or sets the stroke thickness for the markers. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [ShowLabels](cartesianseries.mdx#uid-0af65ffcba) | Gets or sets whether to display data labels. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [ShowMarkers](cartesianseries.mdx#uid-d2cec94e0d) | Gets or sets whether to show markers at each data point. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [StrokeDashStyle](cartesianseries.mdx#uid-7b70e59589) | Gets or sets the dash style for the stroke. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [StrokeLineCap](cartesianseries.mdx#uid-75eec6415e) | Gets or sets the shape at the end of a line. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [StrokeLineJoin](cartesianseries.mdx#uid-6889ac3398) | Gets or sets the shape at the corners of a line. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [Trendlines](cartesianseries.mdx#uid-b4d29f02b8) | Gets the collection of trendlines for this series. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [YAxisPosition](cartesianseries.mdx#uid-188ab70430) | Gets or sets which Y-axis this series should use for scaling. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [AnimationDelay](chartseries.mdx#uid-ed1044e47b) | Gets or sets the delay before the animation starts. Inherited from [ChartSeries](chartseries.mdx). |
| [AnimationProgress](chartseries.mdx#uid-58a7070020) | Gets or sets the animation progress (0.0 to 1.0). Inherited from [ChartSeries](chartseries.mdx). |
| [Fill](chartseries.mdx#uid-d890c5c158) | Gets or sets the default series brush. For fill-capable series, this is the fill brush. For line-based series, this acts as the fallback primary series color when [Avalonia.Controls.Charts.ChartSeries.Stroke](xref:Avalonia.Controls.Charts.ChartSeries.Stroke) is not set. Inherited from [ChartSeries](chartseries.mdx). |
| [IsHighlightEnabled](chartseries.mdx#uid-8f4089ad90) | Gets or sets whether hover highlighting is enabled for this series. When enabled, hovering over a data point dims the other items. On radial charts (pie, donut, funnel, radial bar), the hovered item also explodes outward. Inherited from [ChartSeries](chartseries.mdx). |
| [IsSelectionEnabled](chartseries.mdx#uid-42fe7bb0b4) | Gets or sets whether data point selection is enabled for this series. Inherited from [ChartSeries](chartseries.mdx). |
| [IsTooltipEnabled](chartseries.mdx#uid-5eba377cb7) | Gets or sets whether tooltips are enabled for this series. Inherited from [ChartSeries](chartseries.mdx). |
| [ItemsSource](chartseries.mdx#uid-265bfa2e8f) | Gets or sets the data source for this series. Inherited from [ChartSeries](chartseries.mdx). |
| [OwnerChart](chartseries.mdx#uid-5bb0e98167) | Gets or sets the parent chart that owns this series. Inherited from [ChartSeries](chartseries.mdx). |
| [PointBrushPath](chartseries.mdx#uid-068fc968f7) | Gets or sets the property path to extract a custom [Avalonia.Media.IBrush](xref:Avalonia.Media.IBrush) from each data item. When set, individual data points, markers, segments, or slices will use the brush resolved from this property instead of the series default. Inherited from [ChartSeries](chartseries.mdx). |
| [SelectedIndex](chartseries.mdx#uid-58ebc0a860) | Gets or sets the index of the selected data point. -1 means no selection. Inherited from [ChartSeries](chartseries.mdx). |
| [SelectedIndexes](chartseries.mdx#uid-2691f6f54e) | Gets the collection of selected indexes (for Multiple selection type). Inherited from [ChartSeries](chartseries.mdx). |
| [SelectionBrush](chartseries.mdx#uid-679a85484b) | Gets or sets the brush used to highlight selected data points. Inherited from [ChartSeries](chartseries.mdx). |
| [SelectionMode](chartseries.mdx#uid-88c751521d) | Gets or sets the selection behavior. Inherited from [ChartSeries](chartseries.mdx). |
| [SelectionStroke](chartseries.mdx#uid-05446458ac) | Gets or sets the stroke brush used to outline selected data points. When null, no selection stroke is drawn. Inherited from [ChartSeries](chartseries.mdx). |
| [SelectionStrokeThickness](chartseries.mdx#uid-9e0838889a) | Gets or sets the stroke thickness for the selection outline. Inherited from [ChartSeries](chartseries.mdx). |
| [Stroke](chartseries.mdx#uid-dbb40e7623) | Gets or sets the explicit stroke or outline brush for the series. Line-based series should prefer this property for the rendered line color. Inherited from [ChartSeries](chartseries.mdx). |
| [StrokeThickness](chartseries.mdx#uid-ff7bc510f1) | Gets or sets the stroke thickness for the series. Inherited from [ChartSeries](chartseries.mdx). |
| [Title](chartseries.mdx#uid-e384038004) | Gets or sets the title of the series. Inherited from [ChartSeries](chartseries.mdx). |
| [TooltipTemplate](chartseries.mdx#uid-09e2016e27) | Gets or sets the custom template for tooltips on this series. Inherited from [ChartSeries](chartseries.mdx). |
| [ValuePath](chartseries.mdx#uid-4297742d2f) | Gets or sets the property path to extract the value from each data item. Inherited from [ChartSeries](chartseries.mdx). |
| [Background](../primitives/templatedcontrol.mdx#uid-50dbd38ef5) | Gets or sets the brush used to draw the control's background. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [BackgroundSizing](../primitives/templatedcontrol.mdx#uid-07ef33f604) | Gets or sets how the control's background is drawn relative to the control's border. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [BorderBrush](../primitives/templatedcontrol.mdx#uid-cf666d3678) | Gets or sets the brush used to draw the control's border. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [BorderThickness](../primitives/templatedcontrol.mdx#uid-4e2cc431b4) | Gets or sets the thickness of the control's border. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [CornerRadius](../primitives/templatedcontrol.mdx#uid-91a447dd4a) | Gets or sets the radius of the border rounded corners. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontFamily](../primitives/templatedcontrol.mdx#uid-fc37661323) | Gets or sets the font family used to draw the control's text. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontFeatures](../primitives/templatedcontrol.mdx#uid-1a7abb9411) | Gets or sets the font features turned on/off. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontSize](../primitives/templatedcontrol.mdx#uid-0a8445793b) | Gets or sets the size of the control's text in points. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontStretch](../primitives/templatedcontrol.mdx#uid-f23e3b5938) | Gets or sets the font stretch used to draw the control's text. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontStyle](../primitives/templatedcontrol.mdx#uid-0d0ccbde51) | Gets or sets the font style used to draw the control's text. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontWeight](../primitives/templatedcontrol.mdx#uid-967cc71125) | Gets or sets the font weight used to draw the control's text. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [Foreground](../primitives/templatedcontrol.mdx#uid-dff6480679) | Gets or sets the brush used to draw the control's text and other foreground elements. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [LetterSpacing](../primitives/templatedcontrol.mdx#uid-2d96a527e6) | Gets or sets the letter spacing for the control's text content. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [Padding](../primitives/templatedcontrol.mdx#uid-f5271cd58d) | Gets or sets the padding placed between the border of the control and its content. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [Template](../primitives/templatedcontrol.mdx#uid-7a289f7bd4) | Gets or sets the template that defines the control's appearance. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [ContextFlyout](../control.mdx#uid-3821ce41c2) | Gets or sets a context flyout to the control Inherited from [Control](../control.mdx). |
| [ContextMenu](../control.mdx#uid-95e5e3ccc3) | Gets or sets a context menu to the control. Inherited from [Control](../control.mdx). |
| [DataTemplates](../control.mdx#uid-78ff251b26) | Gets or sets the data templates for the control. Inherited from [Control](../control.mdx). |
| [FocusAdorner](../control.mdx#uid-96de66ccc5) | Gets or sets the control's focus adorner. Inherited from [Control](../control.mdx). |
| [IsLoaded](../control.mdx#uid-7b8aa52b02) | Gets a value indicating whether the control is fully constructed in the visual tree and both layout and render are complete. Inherited from [Control](../control.mdx). |
| [Tag](../control.mdx#uid-2790b0c958) | Gets or sets a user-defined object attached to the control. Inherited from [Control](../control.mdx). |
| [Cursor](../../input/inputelement.mdx#uid-4222de38cf) | Gets or sets associated mouse cursor. Inherited from [InputElement](../../input/inputelement.mdx). |
| [Focusable](../../input/inputelement.mdx#uid-20168c45b2) | Gets or sets a value indicating whether the control can receive focus. Inherited from [InputElement](../../input/inputelement.mdx). |
| [GestureRecognizers](../../input/inputelement.mdx#uid-ddee464eee) | Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsEffectivelyEnabled](../../input/inputelement.mdx#uid-48ba4c0379) | Gets a value indicating whether this control and all its parents are enabled. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsEnabled](../../input/inputelement.mdx#uid-31817dbbc9) | Gets or sets a value indicating whether the control is enabled for user interaction. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsFocused](../../input/inputelement.mdx#uid-e4cd1a3717) | Gets a value indicating whether the control is focused. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsHitTestVisible](../../input/inputelement.mdx#uid-11cb006f8b) | Gets or sets a value indicating whether the control is considered for hit testing. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsKeyboardFocusWithin](../../input/inputelement.mdx#uid-6e5855b185) | Gets a value indicating whether keyboard focus is anywhere within the element or its visual tree child elements. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsPointerOver](../../input/inputelement.mdx#uid-09e1553c00) | Gets a value indicating whether the pointer is currently over the control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsTabStop](../../input/inputelement.mdx#uid-455d73fca4) | Gets or sets a value that indicates whether the control is included in tab navigation. Inherited from [InputElement](../../input/inputelement.mdx). |
| [KeyBindings](../../input/inputelement.mdx#uid-827a5420b2) | Inherited from [InputElement](../../input/inputelement.mdx). |
| [TabIndex](../../input/inputelement.mdx#uid-82ec6bf9ac) | Gets or sets a value that determines the order in which elements receive focus when the user navigates through controls by pressing the Tab key. Inherited from [InputElement](../../input/inputelement.mdx). |
| [DesiredSize](../../layout/layoutable.mdx#uid-5eb61af32f) | Gets the size that this element computed during the measure pass of the layout process. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [Height](../../layout/layoutable.mdx#uid-4334ab83b4) | Gets or sets the height of the element. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [HorizontalAlignment](../../layout/layoutable.mdx#uid-c621d98d6c) | Gets or sets the element's preferred horizontal alignment in its parent. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [IsArrangeValid](../../layout/layoutable.mdx#uid-97d1d86c71) | Gets a value indicating whether the control's layouts arrange is valid. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [IsMeasureValid](../../layout/layoutable.mdx#uid-2b3ce6ad30) | Gets a value indicating whether the control's layout measure is valid. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [Margin](../../layout/layoutable.mdx#uid-3785e24bed) | Gets or sets the margin around the element. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [MaxHeight](../../layout/layoutable.mdx#uid-6ffe996277) | Gets or sets the maximum height of the element. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [MaxWidth](../../layout/layoutable.mdx#uid-ea6041bc57) | Gets or sets the maximum width of the element. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [MinHeight](../../layout/layoutable.mdx#uid-822cd64c83) | Gets or sets the minimum height of the element. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [MinWidth](../../layout/layoutable.mdx#uid-5bd3b5bb2c) | Gets or sets the minimum width of the element. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [UseLayoutRounding](../../layout/layoutable.mdx#uid-5998a3d47c) | Gets or sets a value that determines whether the element should be snapped to pixel boundaries at layout time. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [VerticalAlignment](../../layout/layoutable.mdx#uid-9652a1b295) | Gets or sets the element's preferred vertical alignment in its parent. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [Width](../../layout/layoutable.mdx#uid-491c41475f) | Gets or sets the width of the element. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [Bounds](../../visual.mdx#uid-a01c3022f7) | Gets the bounds of the control relative to its parent. Inherited from [Visual](../../visual.mdx). |
| [CacheMode](../../visual.mdx#uid-c565afad32) | Gets or sets the cache mode of the visual. Inherited from [Visual](../../visual.mdx). |
| [Clip](../../visual.mdx#uid-7623faaeaf) | Gets or sets the geometry clip for this visual. Inherited from [Visual](../../visual.mdx). |
| [ClipToBounds](../../visual.mdx#uid-63c348aebd) | Gets or sets a value indicating whether the control should be clipped to its bounds. Inherited from [Visual](../../visual.mdx). |
| [Effect](../../visual.mdx#uid-65e2be6b7c) | Gets or sets the effect of the control. Inherited from [Visual](../../visual.mdx). |
| [FlowDirection](../../visual.mdx#uid-c7929bde53) | Gets or sets the text flow direction. Inherited from [Visual](../../visual.mdx). |
| [HasMirrorTransform](../../visual.mdx#uid-70dc13a730) | Gets or sets a value indicating whether to apply mirror transform on this control. Inherited from [Visual](../../visual.mdx). |
| [IsEffectivelyVisible](../../visual.mdx#uid-03d6c15a63) | Gets a value indicating whether this control and all its parents are visible. Inherited from [Visual](../../visual.mdx). |
| [IsVisible](../../visual.mdx#uid-da2b0ca167) | Gets or sets a value indicating whether this control is visible. Inherited from [Visual](../../visual.mdx). |
| [Opacity](../../visual.mdx#uid-9eaf1e3d57) | Gets or sets the opacity of the control. Inherited from [Visual](../../visual.mdx). |
| [OpacityMask](../../visual.mdx#uid-b6579b9244) | Gets or sets the opacity mask of the control. Inherited from [Visual](../../visual.mdx). |
| [RenderTransform](../../visual.mdx#uid-7ee76ff32a) | Gets or sets the render transform of the control. Inherited from [Visual](../../visual.mdx). |
| [RenderTransformOrigin](../../visual.mdx#uid-3501120c25) | Gets or sets the transform origin of the control. Inherited from [Visual](../../visual.mdx). |
| [ZIndex](../../visual.mdx#uid-a3275ade9d) | Gets or sets the Z index of the control. Inherited from [Visual](../../visual.mdx). |
| [ActualThemeVariant](../../styledelement.mdx#uid-776bcbe4bf) | Gets the UI theme that is currently used by the element, which might be different than the RequestedThemeVariantProperty. Inherited from [StyledElement](../../styledelement.mdx). |
| [Classes](../../styledelement.mdx#uid-b7b7edea05) | Gets or sets the styled element's classes. Inherited from [StyledElement](../../styledelement.mdx). |
| [DataContext](../../styledelement.mdx#uid-647f924a56) | Gets or sets the control's data context. Inherited from [StyledElement](../../styledelement.mdx). |
| [IsInitialized](../../styledelement.mdx#uid-59a7cddacb) | Gets a value that indicates whether the element has finished initialization. Inherited from [StyledElement](../../styledelement.mdx). |
| [Name](../../styledelement.mdx#uid-245f4ccff5) | Gets or sets the name of the styled element. Inherited from [StyledElement](../../styledelement.mdx). |
| [Parent](../../styledelement.mdx#uid-aad2c5c78d) | Gets the styled element's logical parent. Inherited from [StyledElement](../../styledelement.mdx). |
| [Resources](../../styledelement.mdx#uid-f6488ca4b7) | Gets or sets the styled element's resource dictionary. Inherited from [StyledElement](../../styledelement.mdx). |
| [StyleKey](../../styledelement.mdx#uid-081584075e) | Gets the type by which the element is styled. Inherited from [StyledElement](../../styledelement.mdx). |
| [Styles](../../styledelement.mdx#uid-ae663139cc) | Gets the styles for the styled element. Inherited from [StyledElement](../../styledelement.mdx). |
| [TemplatedParent](../../styledelement.mdx#uid-dbf6ddacc3) | Gets the styled element whose lookless template this styled element is part of. Inherited from [StyledElement](../../styledelement.mdx). |
| [Theme](../../styledelement.mdx#uid-1aebed283d) | Gets or sets the theme to be applied to the element. Inherited from [StyledElement](../../styledelement.mdx). |
| [Transitions](../../animation/animatable.mdx#uid-1b3138f517) | Gets or sets the property transitions for the control. Inherited from [Animatable](../../animation/animatable.mdx). |
| [Dispatcher](../../avaloniaobject.mdx#uid-b25fa51632) | Returns the [Avalonia.AvaloniaObject.Dispatcher](xref:Avalonia.AvaloniaObject.Dispatcher) that this [Avalonia.AvaloniaObject](xref:Avalonia.AvaloniaObject) is associated with. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [Item](../../avaloniaobject.mdx#uid-c1d1f1bc0f) | Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-bc0afe9843"></span>

### BoxSize Property

Gets or sets the box size (price change required to add a new X or O).

```csharp
public double BoxSize { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-79db3b3907"></span>

### OBrush Property

Gets or sets the brush used for falling columns (O).

```csharp
public Avalonia.Media.IBrush OBrush { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-613489a361"></span>

### ReversalAmount Property

Gets or sets the reversal amount (number of boxes required to change direction).

```csharp
public int ReversalAmount { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-532897169b"></span>

### XBrush Property

Gets or sets the brush used for rising columns (X).

```csharp
public Avalonia.Media.IBrush XBrush { get; set; }
```

</section>

## Fields

| Name | Description |
| --- | --- |
| [BoxSizeProperty](#uid-73bd8c0975) | Identifies the [Avalonia.Controls.Charts.PointAndFigureSeries.BoxSize](xref:Avalonia.Controls.Charts.PointAndFigureSeries.BoxSize) Avalonia property. |
| [OBrushProperty](#uid-c9332de9ee) | Identifies the [Avalonia.Controls.Charts.PointAndFigureSeries.OBrush](xref:Avalonia.Controls.Charts.PointAndFigureSeries.OBrush) Avalonia property. |
| [ReversalAmountProperty](#uid-52dab41991) | Identifies the [Avalonia.Controls.Charts.PointAndFigureSeries.ReversalAmount](xref:Avalonia.Controls.Charts.PointAndFigureSeries.ReversalAmount) Avalonia property. |
| [XBrushProperty](#uid-01a8f322c3) | Identifies the [Avalonia.Controls.Charts.PointAndFigureSeries.XBrush](xref:Avalonia.Controls.Charts.PointAndFigureSeries.XBrush) Avalonia property. |
| [ClosePathProperty](financialseries.mdx#uid-f6b1fe5741) | Identifies the [Avalonia.Controls.Charts.FinancialSeries.ClosePath](xref:Avalonia.Controls.Charts.FinancialSeries.ClosePath) Avalonia property. Inherited from [FinancialSeries](financialseries.mdx). |
| [DatePathProperty](financialseries.mdx#uid-d64f4aa326) | Identifies the [Avalonia.Controls.Charts.FinancialSeries.DatePath](xref:Avalonia.Controls.Charts.FinancialSeries.DatePath) Avalonia property. Inherited from [FinancialSeries](financialseries.mdx). |
| [DownFillProperty](financialseries.mdx#uid-7aead7a2f0) | Identifies the [Avalonia.Controls.Charts.FinancialSeries.DownFill](xref:Avalonia.Controls.Charts.FinancialSeries.DownFill) Avalonia property. Inherited from [FinancialSeries](financialseries.mdx). |
| [DownStrokeProperty](financialseries.mdx#uid-cfda532ecc) | Identifies the [Avalonia.Controls.Charts.FinancialSeries.DownStroke](xref:Avalonia.Controls.Charts.FinancialSeries.DownStroke) Avalonia property. Inherited from [FinancialSeries](financialseries.mdx). |
| [HighPathProperty](financialseries.mdx#uid-526e7debc1) | Identifies the [Avalonia.Controls.Charts.FinancialSeries.HighPath](xref:Avalonia.Controls.Charts.FinancialSeries.HighPath) Avalonia property. Inherited from [FinancialSeries](financialseries.mdx). |
| [LowPathProperty](financialseries.mdx#uid-55c58dec27) | Identifies the [Avalonia.Controls.Charts.FinancialSeries.LowPath](xref:Avalonia.Controls.Charts.FinancialSeries.LowPath) Avalonia property. Inherited from [FinancialSeries](financialseries.mdx). |
| [OpenPathProperty](financialseries.mdx#uid-c29cf7bb6f) | Identifies the [Avalonia.Controls.Charts.FinancialSeries.OpenPath](xref:Avalonia.Controls.Charts.FinancialSeries.OpenPath) Avalonia property. Inherited from [FinancialSeries](financialseries.mdx). |
| [UpFillProperty](financialseries.mdx#uid-ad402b310f) | Identifies the [Avalonia.Controls.Charts.FinancialSeries.UpFill](xref:Avalonia.Controls.Charts.FinancialSeries.UpFill) Avalonia property. Inherited from [FinancialSeries](financialseries.mdx). |
| [UpStrokeProperty](financialseries.mdx#uid-c9bc60dd14) | Identifies the [Avalonia.Controls.Charts.FinancialSeries.UpStroke](xref:Avalonia.Controls.Charts.FinancialSeries.UpStroke) Avalonia property. Inherited from [FinancialSeries](financialseries.mdx). |
| [CategoryPathProperty](cartesianseries.mdx#uid-984d5c8a43) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.CategoryPath](xref:Avalonia.Controls.Charts.CartesianSeries.CategoryPath) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [EmptyPointModeProperty](cartesianseries.mdx#uid-63d5f07951) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.EmptyPointMode](xref:Avalonia.Controls.Charts.CartesianSeries.EmptyPointMode) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelBackgroundProperty](cartesianseries.mdx#uid-0cf9c2b95a) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.LabelBackground](xref:Avalonia.Controls.Charts.CartesianSeries.LabelBackground) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelCornerRadiusProperty](cartesianseries.mdx#uid-4dd4b883dd) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.LabelCornerRadius](xref:Avalonia.Controls.Charts.CartesianSeries.LabelCornerRadius) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelFontSizeProperty](cartesianseries.mdx#uid-e3c8290a0a) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.LabelFontSize](xref:Avalonia.Controls.Charts.CartesianSeries.LabelFontSize) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelForegroundProperty](cartesianseries.mdx#uid-117ebf2608) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.LabelForeground](xref:Avalonia.Controls.Charts.CartesianSeries.LabelForeground) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelFormatProperty](cartesianseries.mdx#uid-3346209b63) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.LabelFormat](xref:Avalonia.Controls.Charts.CartesianSeries.LabelFormat) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelOffsetProperty](cartesianseries.mdx#uid-48cc354a3b) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.LabelOffset](xref:Avalonia.Controls.Charts.CartesianSeries.LabelOffset) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [LabelPaddingProperty](cartesianseries.mdx#uid-f7309063a6) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.LabelPadding](xref:Avalonia.Controls.Charts.CartesianSeries.LabelPadding) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [MarkerFillProperty](cartesianseries.mdx#uid-9a85a3460a) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.MarkerFill](xref:Avalonia.Controls.Charts.CartesianSeries.MarkerFill) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [MarkerShapeProperty](cartesianseries.mdx#uid-d9016fa732) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.MarkerShape](xref:Avalonia.Controls.Charts.CartesianSeries.MarkerShape) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [MarkerSizeProperty](cartesianseries.mdx#uid-7148afcdd1) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.MarkerSize](xref:Avalonia.Controls.Charts.CartesianSeries.MarkerSize) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [MarkerStrokeProperty](cartesianseries.mdx#uid-829c33e4e2) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.MarkerStroke](xref:Avalonia.Controls.Charts.CartesianSeries.MarkerStroke) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [MarkerStrokeThicknessProperty](cartesianseries.mdx#uid-afc56f4e9c) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.MarkerStrokeThickness](xref:Avalonia.Controls.Charts.CartesianSeries.MarkerStrokeThickness) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [ShowLabelsProperty](cartesianseries.mdx#uid-6f2d985b60) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.ShowLabels](xref:Avalonia.Controls.Charts.CartesianSeries.ShowLabels) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [ShowMarkersProperty](cartesianseries.mdx#uid-84574ea4f4) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.ShowMarkers](xref:Avalonia.Controls.Charts.CartesianSeries.ShowMarkers) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [StrokeDashStyleProperty](cartesianseries.mdx#uid-131070a075) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.StrokeDashStyle](xref:Avalonia.Controls.Charts.CartesianSeries.StrokeDashStyle) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [StrokeLineCapProperty](cartesianseries.mdx#uid-e81df88874) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.StrokeLineCap](xref:Avalonia.Controls.Charts.CartesianSeries.StrokeLineCap) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [StrokeLineJoinProperty](cartesianseries.mdx#uid-de52d5e70e) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.StrokeLineJoin](xref:Avalonia.Controls.Charts.CartesianSeries.StrokeLineJoin) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [TrendlinesProperty](cartesianseries.mdx#uid-726939bc11) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.Trendlines](xref:Avalonia.Controls.Charts.CartesianSeries.Trendlines) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [YAxisPositionProperty](cartesianseries.mdx#uid-fd92dc7e39) | Identifies the [Avalonia.Controls.Charts.CartesianSeries.YAxisPosition](xref:Avalonia.Controls.Charts.CartesianSeries.YAxisPosition) Avalonia property. Inherited from [CartesianSeries](cartesianseries.mdx). |
| [AnimationDelayProperty](chartseries.mdx#uid-fcb883e130) | Identifies the [Avalonia.Controls.Charts.ChartSeries.AnimationDelay](xref:Avalonia.Controls.Charts.ChartSeries.AnimationDelay) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [AnimationProgressProperty](chartseries.mdx#uid-aac6f7d420) | Identifies the [Avalonia.Controls.Charts.ChartSeries.AnimationProgress](xref:Avalonia.Controls.Charts.ChartSeries.AnimationProgress) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [FillProperty](chartseries.mdx#uid-ec6400280a) | Identifies the [Avalonia.Controls.Charts.ChartSeries.Fill](xref:Avalonia.Controls.Charts.ChartSeries.Fill) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [IsHighlightEnabledProperty](chartseries.mdx#uid-44363f1c71) | Identifies the [Avalonia.Controls.Charts.ChartSeries.IsHighlightEnabled](xref:Avalonia.Controls.Charts.ChartSeries.IsHighlightEnabled) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [IsSelectionEnabledProperty](chartseries.mdx#uid-c998522f48) | Identifies the [Avalonia.Controls.Charts.ChartSeries.IsSelectionEnabled](xref:Avalonia.Controls.Charts.ChartSeries.IsSelectionEnabled) Avalonia property. Shares the same [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) instance as [Avalonia.Controls.Charts.SelectableChartBase.IsSelectionEnabledProperty](xref:Avalonia.Controls.Charts.SelectableChartBase.IsSelectionEnabledProperty) so styles target both. Inherited from [ChartSeries](chartseries.mdx). |
| [IsTooltipEnabledProperty](chartseries.mdx#uid-68fc9ae2fe) | Identifies the [Avalonia.Controls.Charts.ChartSeries.IsTooltipEnabled](xref:Avalonia.Controls.Charts.ChartSeries.IsTooltipEnabled) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [ItemsSourceProperty](chartseries.mdx#uid-5474c33940) | Identifies the [Avalonia.Controls.Charts.ChartSeries.ItemsSource](xref:Avalonia.Controls.Charts.ChartSeries.ItemsSource) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [PointBrushPathProperty](chartseries.mdx#uid-5f606359c3) | Identifies the [Avalonia.Controls.Charts.ChartSeries.PointBrushPath](xref:Avalonia.Controls.Charts.ChartSeries.PointBrushPath) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [SelectedIndexProperty](chartseries.mdx#uid-73bd6135d7) | Identifies the [Avalonia.Controls.Charts.ChartSeries.SelectedIndex](xref:Avalonia.Controls.Charts.ChartSeries.SelectedIndex) Avalonia property. Shares the same [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) instance as [Avalonia.Controls.Charts.SelectableChartBase.SelectedIndexProperty](xref:Avalonia.Controls.Charts.SelectableChartBase.SelectedIndexProperty). Inherited from [ChartSeries](chartseries.mdx). |
| [SelectionBrushProperty](chartseries.mdx#uid-9cbb996284) | Identifies the [Avalonia.Controls.Charts.ChartSeries.SelectionBrush](xref:Avalonia.Controls.Charts.ChartSeries.SelectionBrush) Avalonia property. Shares the same [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) instance as [Avalonia.Controls.Charts.SelectableChartBase.SelectionBrushProperty](xref:Avalonia.Controls.Charts.SelectableChartBase.SelectionBrushProperty). Inherited from [ChartSeries](chartseries.mdx). |
| [SelectionModeProperty](chartseries.mdx#uid-b63207ab1a) | Identifies the [Avalonia.Controls.Charts.ChartSeries.SelectionMode](xref:Avalonia.Controls.Charts.ChartSeries.SelectionMode) Avalonia property. Shares the same [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) instance as [Avalonia.Controls.Charts.SelectableChartBase.SelectionModeProperty](xref:Avalonia.Controls.Charts.SelectableChartBase.SelectionModeProperty). Inherited from [ChartSeries](chartseries.mdx). |
| [SelectionStrokeProperty](chartseries.mdx#uid-43839636da) | Identifies the [Avalonia.Controls.Charts.ChartSeries.SelectionStroke](xref:Avalonia.Controls.Charts.ChartSeries.SelectionStroke) Avalonia property. Shares the same [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) instance as [Avalonia.Controls.Charts.SelectableChartBase.SelectionStrokeProperty](xref:Avalonia.Controls.Charts.SelectableChartBase.SelectionStrokeProperty). Inherited from [ChartSeries](chartseries.mdx). |
| [SelectionStrokeThicknessProperty](chartseries.mdx#uid-7760bcd6c7) | Identifies the [Avalonia.Controls.Charts.ChartSeries.SelectionStrokeThickness](xref:Avalonia.Controls.Charts.ChartSeries.SelectionStrokeThickness) Avalonia property. Shares the same [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) instance as [Avalonia.Controls.Charts.SelectableChartBase.SelectionStrokeThicknessProperty](xref:Avalonia.Controls.Charts.SelectableChartBase.SelectionStrokeThicknessProperty). Inherited from [ChartSeries](chartseries.mdx). |
| [StrokeProperty](chartseries.mdx#uid-555fa50baa) | Identifies the [Avalonia.Controls.Charts.ChartSeries.Stroke](xref:Avalonia.Controls.Charts.ChartSeries.Stroke) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [StrokeThicknessProperty](chartseries.mdx#uid-f214615370) | Identifies the [Avalonia.Controls.Charts.ChartSeries.StrokeThickness](xref:Avalonia.Controls.Charts.ChartSeries.StrokeThickness) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [TitleProperty](chartseries.mdx#uid-97c237aadc) | Identifies the [Avalonia.Controls.Charts.ChartSeries.Title](xref:Avalonia.Controls.Charts.ChartSeries.Title) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [TooltipTemplateProperty](chartseries.mdx#uid-97b872a814) | Identifies the [Avalonia.Controls.Charts.ChartSeries.TooltipTemplate](xref:Avalonia.Controls.Charts.ChartSeries.TooltipTemplate) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [ValuePathProperty](chartseries.mdx#uid-65f5a78ec3) | Identifies the [Avalonia.Controls.Charts.ChartSeries.ValuePath](xref:Avalonia.Controls.Charts.ChartSeries.ValuePath) Avalonia property. Inherited from [ChartSeries](chartseries.mdx). |
| [BackgroundProperty](../primitives/templatedcontrol.mdx#uid-dbbd1ffb9b) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Background](xref:Avalonia.Controls.Primitives.TemplatedControl.Background) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [BackgroundSizingProperty](../primitives/templatedcontrol.mdx#uid-316d7708c4) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BackgroundSizing](xref:Avalonia.Controls.Primitives.TemplatedControl.BackgroundSizing) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [BorderBrushProperty](../primitives/templatedcontrol.mdx#uid-a4e6335f37) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BorderBrush](xref:Avalonia.Controls.Primitives.TemplatedControl.BorderBrush) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [BorderThicknessProperty](../primitives/templatedcontrol.mdx#uid-c41e10c675) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BorderThickness](xref:Avalonia.Controls.Primitives.TemplatedControl.BorderThickness) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [CornerRadiusProperty](../primitives/templatedcontrol.mdx#uid-c7cdbfc75d) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.CornerRadius](xref:Avalonia.Controls.Primitives.TemplatedControl.CornerRadius) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontFamilyProperty](../primitives/templatedcontrol.mdx#uid-fefa977c48) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontFamily](xref:Avalonia.Controls.Primitives.TemplatedControl.FontFamily) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontFeaturesProperty](../primitives/templatedcontrol.mdx#uid-54c52748f8) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontFeaturesProperty](xref:Avalonia.Controls.Primitives.TemplatedControl.FontFeaturesProperty) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontSizeProperty](../primitives/templatedcontrol.mdx#uid-c06c71299f) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontSize](xref:Avalonia.Controls.Primitives.TemplatedControl.FontSize) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontStretchProperty](../primitives/templatedcontrol.mdx#uid-d4a988cc8c) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontWeight](xref:Avalonia.Controls.Primitives.TemplatedControl.FontWeight) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontStyleProperty](../primitives/templatedcontrol.mdx#uid-14162a470d) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontStyle](xref:Avalonia.Controls.Primitives.TemplatedControl.FontStyle) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [FontWeightProperty](../primitives/templatedcontrol.mdx#uid-b911f20b9f) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontWeight](xref:Avalonia.Controls.Primitives.TemplatedControl.FontWeight) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [ForegroundProperty](../primitives/templatedcontrol.mdx#uid-65cd93050b) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Foreground](xref:Avalonia.Controls.Primitives.TemplatedControl.Foreground) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [IsTemplateFocusTargetProperty](../primitives/templatedcontrol.mdx#uid-e50dcff99d) | Defines the IsTemplateFocusTarget attached property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [LetterSpacingProperty](../primitives/templatedcontrol.mdx#uid-cd0904df0e) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.LetterSpacing](xref:Avalonia.Controls.Primitives.TemplatedControl.LetterSpacing) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [PaddingProperty](../primitives/templatedcontrol.mdx#uid-8836c61358) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Padding](xref:Avalonia.Controls.Primitives.TemplatedControl.Padding) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [TemplateAppliedEvent](../primitives/templatedcontrol.mdx#uid-8ed6368102) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.TemplateApplied](xref:Avalonia.Controls.Primitives.TemplatedControl.TemplateApplied) routed event. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [TemplateProperty](../primitives/templatedcontrol.mdx#uid-888470a301) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Template](xref:Avalonia.Controls.Primitives.TemplatedControl.Template) property. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [ContextFlyoutProperty](../control.mdx#uid-7adf3cc0e6) | Defines the [Avalonia.Controls.Control.ContextFlyout](xref:Avalonia.Controls.Control.ContextFlyout) property Inherited from [Control](../control.mdx). |
| [ContextMenuProperty](../control.mdx#uid-0fd2af59c9) | Defines the [Avalonia.Controls.Control.ContextMenu](xref:Avalonia.Controls.Control.ContextMenu) property. Inherited from [Control](../control.mdx). |
| [FocusAdornerProperty](../control.mdx#uid-701a7e7e23) | Defines the [Avalonia.Controls.Control.FocusAdorner](xref:Avalonia.Controls.Control.FocusAdorner) property. Inherited from [Control](../control.mdx). |
| [LoadedEvent](../control.mdx#uid-f76afcf3e6) | Defines the [Avalonia.Controls.Control.Loaded](xref:Avalonia.Controls.Control.Loaded) event. Inherited from [Control](../control.mdx). |
| [RequestBringIntoViewEvent](../control.mdx#uid-e52a870608) | Event raised when an element wishes to be scrolled into view. Inherited from [Control](../control.mdx). |
| [SizeChangedEvent](../control.mdx#uid-7d071894f4) | Defines the [Avalonia.Controls.Control.SizeChanged](xref:Avalonia.Controls.Control.SizeChanged) event. Inherited from [Control](../control.mdx). |
| [TagProperty](../control.mdx#uid-291b4a3b79) | Defines the [Avalonia.Controls.Control.Tag](xref:Avalonia.Controls.Control.Tag) property. Inherited from [Control](../control.mdx). |
| [UnloadedEvent](../control.mdx#uid-382a8f6733) | Defines the [Avalonia.Controls.Control.Unloaded](xref:Avalonia.Controls.Control.Unloaded) event. Inherited from [Control](../control.mdx). |
| [ContextCanceledEvent](../../input/inputelement.mdx#uid-c58107fdb9) | Provides event data for the [Avalonia.Input.InputElement.ContextCanceled](xref:Avalonia.Input.InputElement.ContextCanceled) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [ContextRequestedEvent](../../input/inputelement.mdx#uid-11362fc1dd) | Provides event data for the [Avalonia.Input.InputElement.ContextRequested](xref:Avalonia.Input.InputElement.ContextRequested) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [CursorProperty](../../input/inputelement.mdx#uid-37a51ae89c) | Gets or sets associated mouse cursor. Inherited from [InputElement](../../input/inputelement.mdx). |
| [DoubleTappedEvent](../../input/inputelement.mdx#uid-932047336f) | Defines the [Avalonia.Input.InputElement.DoubleTapped](xref:Avalonia.Input.InputElement.DoubleTapped) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [FocusableProperty](../../input/inputelement.mdx#uid-402835abd7) | Defines the [Avalonia.Input.InputElement.Focusable](xref:Avalonia.Input.InputElement.Focusable) property. Inherited from [InputElement](../../input/inputelement.mdx). |
| [GettingFocusEvent](../../input/inputelement.mdx#uid-23a6940484) | Defines the [Avalonia.Input.InputElement.GettingFocus](xref:Avalonia.Input.InputElement.GettingFocus) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [GotFocusEvent](../../input/inputelement.mdx#uid-750ce32b53) | Defines the [Avalonia.Input.InputElement.GotFocus](xref:Avalonia.Input.InputElement.GotFocus) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [HoldingEvent](../../input/inputelement.mdx#uid-b1eab1bcd8) | Defines the [Avalonia.Input.InputElement.Holding](xref:Avalonia.Input.InputElement.Holding) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsEffectivelyEnabledProperty](../../input/inputelement.mdx#uid-df18a2cff1) | Defines the [Avalonia.Input.InputElement.IsEffectivelyEnabled](xref:Avalonia.Input.InputElement.IsEffectivelyEnabled) property. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsEnabledProperty](../../input/inputelement.mdx#uid-2f2893a804) | Defines the [Avalonia.Input.InputElement.IsEnabled](xref:Avalonia.Input.InputElement.IsEnabled) property. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsFocusedProperty](../../input/inputelement.mdx#uid-ec811cc35b) | Defines the [Avalonia.Input.InputElement.IsFocused](xref:Avalonia.Input.InputElement.IsFocused) property. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsHitTestVisibleProperty](../../input/inputelement.mdx#uid-e774aa17ad) | Defines the [Avalonia.Input.InputElement.IsHitTestVisible](xref:Avalonia.Input.InputElement.IsHitTestVisible) property. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsHoldWithMouseEnabledProperty](../../input/inputelement.mdx#uid-3f460ccdfe) | Defines the IsHoldWithMouseEnabled attached property. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsHoldingEnabledProperty](../../input/inputelement.mdx#uid-a893be5e44) | Defines the IsHoldingEnabled attached property. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsKeyboardFocusWithinProperty](../../input/inputelement.mdx#uid-2dc1dd0d3d) | Defines the [Avalonia.Input.InputElement.IsKeyboardFocusWithin](xref:Avalonia.Input.InputElement.IsKeyboardFocusWithin) property. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsPointerOverProperty](../../input/inputelement.mdx#uid-be6c8adde2) | Defines the [Avalonia.Input.InputElement.IsPointerOver](xref:Avalonia.Input.InputElement.IsPointerOver) property. Inherited from [InputElement](../../input/inputelement.mdx). |
| [IsTabStopProperty](../../input/inputelement.mdx#uid-ed162e7441) | Defines the [Avalonia.Input.InputElement.IsTabStop](xref:Avalonia.Input.InputElement.IsTabStop) property. Inherited from [InputElement](../../input/inputelement.mdx). |
| [KeyDownEvent](../../input/inputelement.mdx#uid-71dfb758e3) | Defines the [Avalonia.Input.InputElement.KeyDown](xref:Avalonia.Input.InputElement.KeyDown) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [KeyUpEvent](../../input/inputelement.mdx#uid-e694f9abc6) | Defines the [Avalonia.Input.InputElement.KeyUp](xref:Avalonia.Input.InputElement.KeyUp) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [LosingFocusEvent](../../input/inputelement.mdx#uid-6ed71d3568) | Defines the [Avalonia.Input.InputElement.LosingFocus](xref:Avalonia.Input.InputElement.LosingFocus) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [LostFocusEvent](../../input/inputelement.mdx#uid-267344bb96) | Defines the [Avalonia.Input.InputElement.LostFocus](xref:Avalonia.Input.InputElement.LostFocus) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PinchEndedEvent](../../input/inputelement.mdx#uid-3f6a3485dd) | Defines the [Avalonia.Input.InputElement.PinchEnded](xref:Avalonia.Input.InputElement.PinchEnded) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PinchEvent](../../input/inputelement.mdx#uid-d109d8c674) | Defines the [Avalonia.Input.InputElement.Pinch](xref:Avalonia.Input.InputElement.Pinch) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerCaptureLostEvent](../../input/inputelement.mdx#uid-e76450a6b8) | Defines the [Avalonia.Input.InputElement.PointerCaptureLost](xref:Avalonia.Input.InputElement.PointerCaptureLost) routed event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerEnteredEvent](../../input/inputelement.mdx#uid-ff4d54fcc4) | Defines the [Avalonia.Input.InputElement.PointerEntered](xref:Avalonia.Input.InputElement.PointerEntered) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerExitedEvent](../../input/inputelement.mdx#uid-fc90c076e6) | Defines the [Avalonia.Input.InputElement.PointerExited](xref:Avalonia.Input.InputElement.PointerExited) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerMovedEvent](../../input/inputelement.mdx#uid-559b3b80ee) | Defines the [Avalonia.Input.InputElement.PointerMoved](xref:Avalonia.Input.InputElement.PointerMoved) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerPressedEvent](../../input/inputelement.mdx#uid-3b7a47d5fd) | Defines the [Avalonia.Input.InputElement.PointerPressed](xref:Avalonia.Input.InputElement.PointerPressed) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerReleasedEvent](../../input/inputelement.mdx#uid-f5b0e74f53) | Defines the [Avalonia.Input.InputElement.PointerReleased](xref:Avalonia.Input.InputElement.PointerReleased) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerTouchPadGestureMagnifyEvent](../../input/inputelement.mdx#uid-72785e777d) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureMagnify](xref:Avalonia.Input.InputElement.PointerTouchPadGestureMagnify) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerTouchPadGestureRotateEvent](../../input/inputelement.mdx#uid-409dcc6358) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureRotate](xref:Avalonia.Input.InputElement.PointerTouchPadGestureRotate) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerTouchPadGestureSwipeEvent](../../input/inputelement.mdx#uid-959da18351) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureSwipe](xref:Avalonia.Input.InputElement.PointerTouchPadGestureSwipe) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerWheelChangedEvent](../../input/inputelement.mdx#uid-dcb45add6a) | Defines the [Avalonia.Input.InputElement.PointerWheelChanged](xref:Avalonia.Input.InputElement.PointerWheelChanged) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PullGestureEndedEvent](../../input/inputelement.mdx#uid-274f53878f) | Defines the [Avalonia.Input.InputElement.PullGestureEnded](xref:Avalonia.Input.InputElement.PullGestureEnded) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PullGestureEvent](../../input/inputelement.mdx#uid-b9a60d43c7) | Defines the [Avalonia.Input.InputElement.PullGesture](xref:Avalonia.Input.InputElement.PullGesture) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [RightTappedEvent](../../input/inputelement.mdx#uid-a67d4b1367) | Defines the [Avalonia.Input.InputElement.RightTapped](xref:Avalonia.Input.InputElement.RightTapped) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [ScrollGestureEndedEvent](../../input/inputelement.mdx#uid-5f3e85c372) | Defines the [Avalonia.Input.InputElement.ScrollGestureEnded](xref:Avalonia.Input.InputElement.ScrollGestureEnded) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [ScrollGestureEvent](../../input/inputelement.mdx#uid-d098469113) | Defines the [Avalonia.Input.InputElement.ScrollGesture](xref:Avalonia.Input.InputElement.ScrollGesture) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [ScrollGestureInertiaStartingEvent](../../input/inputelement.mdx#uid-02f504d2ea) | Defines the [Avalonia.Input.InputElement.ScrollGestureInertiaStarting](xref:Avalonia.Input.InputElement.ScrollGestureInertiaStarting) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [SwipeGestureEndedEvent](../../input/inputelement.mdx#uid-8492058651) | Defines the [Avalonia.Input.InputElement.SwipeGestureEnded](xref:Avalonia.Input.InputElement.SwipeGestureEnded) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [SwipeGestureEvent](../../input/inputelement.mdx#uid-e431c01e95) | Defines the [Avalonia.Input.InputElement.SwipeGesture](xref:Avalonia.Input.InputElement.SwipeGesture) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [TabIndexProperty](../../input/inputelement.mdx#uid-3708b5bfca) | Defines the [Avalonia.Input.InputElement.TabIndex](xref:Avalonia.Input.InputElement.TabIndex) property. Inherited from [InputElement](../../input/inputelement.mdx). |
| [TappedEvent](../../input/inputelement.mdx#uid-15efc26145) | Defines the [Avalonia.Input.InputElement.Tapped](xref:Avalonia.Input.InputElement.Tapped) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [TextInputEvent](../../input/inputelement.mdx#uid-b82dd03ac9) | Defines the [Avalonia.Input.InputElement.TextInput](xref:Avalonia.Input.InputElement.TextInput) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [TextInputMethodClientRequestedEvent](../../input/inputelement.mdx#uid-679852bb37) | Defines the [Avalonia.Input.InputElement.TextInputMethodClientRequested](xref:Avalonia.Input.InputElement.TextInputMethodClientRequested) event. Inherited from [InputElement](../../input/inputelement.mdx). |
| [DesiredSizeProperty](../../layout/layoutable.mdx#uid-b46bed86fe) | Defines the [Avalonia.Layout.Layoutable.DesiredSize](xref:Avalonia.Layout.Layoutable.DesiredSize) property. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [HeightProperty](../../layout/layoutable.mdx#uid-78fa90222f) | Defines the [Avalonia.Layout.Layoutable.Height](xref:Avalonia.Layout.Layoutable.Height) property. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [HorizontalAlignmentProperty](../../layout/layoutable.mdx#uid-43606c2354) | Defines the [Avalonia.Layout.Layoutable.HorizontalAlignment](xref:Avalonia.Layout.Layoutable.HorizontalAlignment) property. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [MarginProperty](../../layout/layoutable.mdx#uid-e730ad0d44) | Defines the [Avalonia.Layout.Layoutable.Margin](xref:Avalonia.Layout.Layoutable.Margin) property. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [MaxHeightProperty](../../layout/layoutable.mdx#uid-0a0a1f20cb) | Defines the [Avalonia.Layout.Layoutable.MaxHeight](xref:Avalonia.Layout.Layoutable.MaxHeight) property. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [MaxWidthProperty](../../layout/layoutable.mdx#uid-febdea8f4d) | Defines the [Avalonia.Layout.Layoutable.MaxWidth](xref:Avalonia.Layout.Layoutable.MaxWidth) property. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [MinHeightProperty](../../layout/layoutable.mdx#uid-f78bf9b812) | Defines the [Avalonia.Layout.Layoutable.MinHeight](xref:Avalonia.Layout.Layoutable.MinHeight) property. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [MinWidthProperty](../../layout/layoutable.mdx#uid-ec0935c392) | Defines the [Avalonia.Layout.Layoutable.MinWidth](xref:Avalonia.Layout.Layoutable.MinWidth) property. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [UseLayoutRoundingProperty](../../layout/layoutable.mdx#uid-e6d86b68b5) | Defines the [Avalonia.Layout.Layoutable.UseLayoutRounding](xref:Avalonia.Layout.Layoutable.UseLayoutRounding) property. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [VerticalAlignmentProperty](../../layout/layoutable.mdx#uid-b50722555e) | Defines the [Avalonia.Layout.Layoutable.VerticalAlignment](xref:Avalonia.Layout.Layoutable.VerticalAlignment) property. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [WidthProperty](../../layout/layoutable.mdx#uid-6f3212affd) | Defines the [Avalonia.Layout.Layoutable.Width](xref:Avalonia.Layout.Layoutable.Width) property. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [BoundsProperty](../../visual.mdx#uid-f22a27348f) | Defines the [Avalonia.Visual.Bounds](xref:Avalonia.Visual.Bounds) property. Inherited from [Visual](../../visual.mdx). |
| [CacheModeProperty](../../visual.mdx#uid-5c89b0f2fc) | Defines the [Avalonia.Visual.CacheMode](xref:Avalonia.Visual.CacheMode) property. Inherited from [Visual](../../visual.mdx). |
| [ClipProperty](../../visual.mdx#uid-06ffce3308) | Defines the [Avalonia.Visual.Clip](xref:Avalonia.Visual.Clip) property. Inherited from [Visual](../../visual.mdx). |
| [ClipToBoundsProperty](../../visual.mdx#uid-4bc41df166) | Defines the [Avalonia.Visual.ClipToBounds](xref:Avalonia.Visual.ClipToBounds) property. Inherited from [Visual](../../visual.mdx). |
| [EffectProperty](../../visual.mdx#uid-9374086bff) | Defines the [Avalonia.Visual.Effect](xref:Avalonia.Visual.Effect) property. Inherited from [Visual](../../visual.mdx). |
| [FlowDirectionProperty](../../visual.mdx#uid-79d00f257f) | Defines the [Avalonia.Visual.FlowDirection](xref:Avalonia.Visual.FlowDirection) property. Inherited from [Visual](../../visual.mdx). |
| [HasMirrorTransformProperty](../../visual.mdx#uid-1f37ec4745) | Defines the [Avalonia.Visual.HasMirrorTransform](xref:Avalonia.Visual.HasMirrorTransform) property. Inherited from [Visual](../../visual.mdx). |
| [IsVisibleProperty](../../visual.mdx#uid-8e0edf21ac) | Defines the [Avalonia.Visual.IsVisible](xref:Avalonia.Visual.IsVisible) property. Inherited from [Visual](../../visual.mdx). |
| [OpacityMaskProperty](../../visual.mdx#uid-aad2c3f7c2) | Defines the [Avalonia.Visual.OpacityMask](xref:Avalonia.Visual.OpacityMask) property. Inherited from [Visual](../../visual.mdx). |
| [OpacityProperty](../../visual.mdx#uid-2a53e27b1f) | Defines the [Avalonia.Visual.Opacity](xref:Avalonia.Visual.Opacity) property. Inherited from [Visual](../../visual.mdx). |
| [RenderTransformOriginProperty](../../visual.mdx#uid-963d266cdd) | Defines the [Avalonia.Visual.RenderTransformOrigin](xref:Avalonia.Visual.RenderTransformOrigin) property. Inherited from [Visual](../../visual.mdx). |
| [RenderTransformProperty](../../visual.mdx#uid-31d20942c2) | Defines the [Avalonia.Visual.RenderTransform](xref:Avalonia.Visual.RenderTransform) property. Inherited from [Visual](../../visual.mdx). |
| [VisualParentProperty](../../visual.mdx#uid-12214f81b9) | Defines the [Avalonia.Visual.VisualParent](xref:Avalonia.Visual.VisualParent) property. Inherited from [Visual](../../visual.mdx). |
| [ZIndexProperty](../../visual.mdx#uid-1dc9376c1e) | Defines the [Avalonia.Visual.ZIndex](xref:Avalonia.Visual.ZIndex) property. Inherited from [Visual](../../visual.mdx). |
| [DataContextProperty](../../styledelement.mdx#uid-7eefabb929) | Defines the [Avalonia.StyledElement.DataContext](xref:Avalonia.StyledElement.DataContext) property. Inherited from [StyledElement](../../styledelement.mdx). |
| [NameProperty](../../styledelement.mdx#uid-bcdbb9de56) | Defines the [Avalonia.StyledElement.Name](xref:Avalonia.StyledElement.Name) property. Inherited from [StyledElement](../../styledelement.mdx). |
| [ParentProperty](../../styledelement.mdx#uid-dc6481a488) | Defines the [Avalonia.StyledElement.Parent](xref:Avalonia.StyledElement.Parent) property. Inherited from [StyledElement](../../styledelement.mdx). |
| [TemplatedParentProperty](../../styledelement.mdx#uid-a2c7149a6b) | Defines the [Avalonia.StyledElement.TemplatedParent](xref:Avalonia.StyledElement.TemplatedParent) property. Inherited from [StyledElement](../../styledelement.mdx). |
| [ThemeProperty](../../styledelement.mdx#uid-05852d7b9a) | Defines the [Avalonia.StyledElement.Theme](xref:Avalonia.StyledElement.Theme) property. Inherited from [StyledElement](../../styledelement.mdx). |
| [TransitionsProperty](../../animation/animatable.mdx#uid-c79f18fac2) | Defines the [Avalonia.Animation.Animatable.Transitions](xref:Avalonia.Animation.Animatable.Transitions) property. Inherited from [Animatable](../../animation/animatable.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-73bd8c0975"></span>

### BoxSizeProperty Field

Identifies the [Avalonia.Controls.Charts.PointAndFigureSeries.BoxSize](xref:Avalonia.Controls.Charts.PointAndFigureSeries.BoxSize) Avalonia property.

```csharp
public Avalonia.StyledProperty<double> BoxSizeProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c9332de9ee"></span>

### OBrushProperty Field

Identifies the [Avalonia.Controls.Charts.PointAndFigureSeries.OBrush](xref:Avalonia.Controls.Charts.PointAndFigureSeries.OBrush) Avalonia property.

```csharp
public Avalonia.StyledProperty<Avalonia.Media.IBrush> OBrushProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-52dab41991"></span>

### ReversalAmountProperty Field

Identifies the [Avalonia.Controls.Charts.PointAndFigureSeries.ReversalAmount](xref:Avalonia.Controls.Charts.PointAndFigureSeries.ReversalAmount) Avalonia property.

```csharp
public Avalonia.StyledProperty<int> ReversalAmountProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-01a8f322c3"></span>

### XBrushProperty Field

Identifies the [Avalonia.Controls.Charts.PointAndFigureSeries.XBrush](xref:Avalonia.Controls.Charts.PointAndFigureSeries.XBrush) Avalonia property.

```csharp
public Avalonia.StyledProperty<Avalonia.Media.IBrush> XBrushProperty
```

</section>

## Events

| Name | Description |
| --- | --- |
| [SelectionChanged](chartseries.mdx#uid-5fb0c1a5f3) | Occurs after the selection has changed. Inherited from [ChartSeries](chartseries.mdx). |
| [SelectionChanging](chartseries.mdx#uid-be441e26bd) | Occurs before the selection changes. This event is cancelable. Inherited from [ChartSeries](chartseries.mdx). |
| [TemplateApplied](../primitives/templatedcontrol.mdx#uid-d353f79b7c) | Raised when the control's template is applied. Inherited from [TemplatedControl](../primitives/templatedcontrol.mdx). |
| [Loaded](../control.mdx#uid-c0a1ac2bc3) | Occurs when the control has been fully constructed in the visual tree and both layout and render are complete. Inherited from [Control](../control.mdx). |
| [SizeChanged](../control.mdx#uid-6cfea6b6c5) | Occurs when the bounds (actual size) of the control have changed. Inherited from [Control](../control.mdx). |
| [Unloaded](../control.mdx#uid-fdfd878e56) | Occurs when the control is removed from the visual tree. Inherited from [Control](../control.mdx). |
| [ContextCanceled](../../input/inputelement.mdx#uid-0132e74ca9) | Occurs when the context input gesture continues into another gesture, to notify the element that the context flyout should not be opened. Inherited from [InputElement](../../input/inputelement.mdx). |
| [ContextRequested](../../input/inputelement.mdx#uid-9067484d6e) | Occurs when the user has completed a context input gesture, such as a right-click. Inherited from [InputElement](../../input/inputelement.mdx). |
| [DoubleTapped](../../input/inputelement.mdx#uid-ad13083e0c) | Occurs when the user briefly contacts and releases twice on a single point, without significant movement. Inherited from [InputElement](../../input/inputelement.mdx). |
| [GettingFocus](../../input/inputelement.mdx#uid-4d054164ee) | Occurs before the control receives focus. Inherited from [InputElement](../../input/inputelement.mdx). |
| [GotFocus](../../input/inputelement.mdx#uid-d41d7ad59c) | Occurs when the control receives focus. Inherited from [InputElement](../../input/inputelement.mdx). |
| [Holding](../../input/inputelement.mdx#uid-8cda030fe2) | Occurs when the user makes a single contact, then maintains contact beyond a given time threshold without releasing or making another contact. Inherited from [InputElement](../../input/inputelement.mdx). |
| [KeyDown](../../input/inputelement.mdx#uid-ee9d987ed5) | Occurs when a key is pressed while the control has focus. Inherited from [InputElement](../../input/inputelement.mdx). |
| [KeyUp](../../input/inputelement.mdx#uid-1131e95f55) | Occurs when a key is released while the control has focus. Inherited from [InputElement](../../input/inputelement.mdx). |
| [LosingFocus](../../input/inputelement.mdx#uid-425fe24716) | Occurs before the control loses focus. Inherited from [InputElement](../../input/inputelement.mdx). |
| [LostFocus](../../input/inputelement.mdx#uid-2061fc85a1) | Occurs when the control loses focus. Inherited from [InputElement](../../input/inputelement.mdx). |
| [Pinch](../../input/inputelement.mdx#uid-96b68421dc) | Occurs when the user moves two contact points closer together. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PinchEnded](../../input/inputelement.mdx#uid-50614bd917) | Occurs when the user releases both contact points used in a pinch gesture. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerCaptureLost](../../input/inputelement.mdx#uid-2121c500a4) | Occurs when the control or its child control loses the pointer capture for any reason, event will not be triggered for a parent control if capture was transferred to another child of that parent control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerEntered](../../input/inputelement.mdx#uid-a81f2c5c9a) | Occurs when the pointer enters the control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerExited](../../input/inputelement.mdx#uid-522e8d0a47) | Occurs when the pointer leaves the control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerMoved](../../input/inputelement.mdx#uid-0990295ea3) | Occurs when the pointer moves over the control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerPressed](../../input/inputelement.mdx#uid-913cdc0df1) | Occurs when the pointer is pressed over the control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerReleased](../../input/inputelement.mdx#uid-5b59b21d5e) | Occurs when the pointer is released over the control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerTouchPadGestureMagnify](../../input/inputelement.mdx#uid-8f1fe6dc4a) | Occurs when the user moves two contact points away from each other on a touchpad. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerTouchPadGestureRotate](../../input/inputelement.mdx#uid-d966c43661) | Occurs when the user places two contact points and moves them in a circular motion on a touchpad. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerTouchPadGestureSwipe](../../input/inputelement.mdx#uid-9011c6de89) | Occurs when the user performs a rapid dragging motion in a single direction on a touchpad. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PointerWheelChanged](../../input/inputelement.mdx#uid-6687ab6f2e) | Occurs when the mouse is scrolled over the control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PullGesture](../../input/inputelement.mdx#uid-d85f52cac5) | Occurs when the user drags from the edge of a control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [PullGestureEnded](../../input/inputelement.mdx#uid-a37f51b846) | Occurs when the user releases the pointer after a pull gesture. Inherited from [InputElement](../../input/inputelement.mdx). |
| [RightTapped](../../input/inputelement.mdx#uid-11a576692d) | Occurs when the user briefly contacts and releases a single point, without significant movement, using a mechanism on the input device recognized as a right button or equivalent. Inherited from [InputElement](../../input/inputelement.mdx). |
| [ScrollGesture](../../input/inputelement.mdx#uid-b571ab3acc) | Occurs when the user continuously moves the pointer in the same direction within the control’s boundaries. Inherited from [InputElement](../../input/inputelement.mdx). |
| [ScrollGestureEnded](../../input/inputelement.mdx#uid-eb3914c3a8) | Occurs when a scroll gesture has fully stopped, taking into account any inertial movement that continues the scroll after the user has released the pointer. Inherited from [InputElement](../../input/inputelement.mdx). |
| [ScrollGestureInertiaStarting](../../input/inputelement.mdx#uid-c8cd2731a5) | Occurs within a scroll gesture, when the user releases the pointer, and scrolling continues by transitioning to momentum-based gliding movement. Inherited from [InputElement](../../input/inputelement.mdx). |
| [SwipeGesture](../../input/inputelement.mdx#uid-0f4fc613ec) | Occurs when the user rapidly drags the pointer in a single direction across the control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [SwipeGestureEnded](../../input/inputelement.mdx#uid-137ae2fd9d) | Occurs when a swipe gesture ends on the control. Inherited from [InputElement](../../input/inputelement.mdx). |
| [Tapped](../../input/inputelement.mdx#uid-6df36c079d) | Occurs when the user briefly contacts and releases a single point, without significant movement. Inherited from [InputElement](../../input/inputelement.mdx). |
| [TextInput](../../input/inputelement.mdx#uid-6dcb8fae07) | Occurs when a user typed some text while the control has focus. Inherited from [InputElement](../../input/inputelement.mdx). |
| [TextInputMethodClientRequested](../../input/inputelement.mdx#uid-5d96b89080) | Occurs when an input element gains input focus and input method is looking for the corresponding client Inherited from [InputElement](../../input/inputelement.mdx). |
| [EffectiveViewportChanged](../../layout/layoutable.mdx#uid-1922b89fa5) | Occurs when the element's effective viewport changes. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [LayoutUpdated](../../layout/layoutable.mdx#uid-05ea32f689) | Occurs when a layout pass completes for the control. Inherited from [Layoutable](../../layout/layoutable.mdx). |
| [AttachedToVisualTree](../../visual.mdx#uid-df40bddf6b) | Raised when the control is attached to a rooted visual tree. Inherited from [Visual](../../visual.mdx). |
| [DetachedFromVisualTree](../../visual.mdx#uid-3f64dafb1c) | Raised when the control is detached from a rooted visual tree. Inherited from [Visual](../../visual.mdx). |
| [ActualThemeVariantChanged](../../styledelement.mdx#uid-e69ef27e71) | Raised when the theme variant is changed on the element or an ancestor of the element. Inherited from [StyledElement](../../styledelement.mdx). |
| [AttachedToLogicalTree](../../styledelement.mdx#uid-717aa68e85) | Raised when the styled element is attached to a rooted logical tree. Inherited from [StyledElement](../../styledelement.mdx). |
| [DataContextChanged](../../styledelement.mdx#uid-4b1cc873f8) | Occurs when the [Avalonia.StyledElement.DataContext](xref:Avalonia.StyledElement.DataContext) property changes. Inherited from [StyledElement](../../styledelement.mdx). |
| [DetachedFromLogicalTree](../../styledelement.mdx#uid-d9f5afa535) | Raised when the styled element is detached from a rooted logical tree. Inherited from [StyledElement](../../styledelement.mdx). |
| [Initialized](../../styledelement.mdx#uid-bd6a5e5c0e) | Occurs when the styled element has finished initialization. Inherited from [StyledElement](../../styledelement.mdx). |
| [ResourcesChanged](../../styledelement.mdx#uid-99a7f47c56) | Occurs when a resource in this styled element or a parent styled element has changed. Inherited from [StyledElement](../../styledelement.mdx). |
| [PropertyChanged](../../avaloniaobject.mdx#uid-d758e26fae) | Raised when a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value changes on this object. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |

</ApiRefPage>

